fix spelling errors

--- a/index.Rmd
+++ b/index.Rmd
@@ -318,9 +318,9 @@ knitr::include_graphics("pictures/1210663154.0.jpg")
 ```
 
 
-The NFL draft process occurs when NFL teams pick players, often attending and playing in colleges and universities across the country. The pattern that most typically occurs is the best college football players in the country are often picked in the first couple of rounds. For example, the first player picked in the first round of the draft is likely very talented and highly sought-after. A player’s performance at their college or university is an important consideration for how likely, or quickly they will be picked by an NFL team. Something to consider when looking at players drafted in the NFL, and their corresponding college, is whether there are certain college football teams that produce some of the first picks in the NFL draft. Throughout this analysis we can determine which U.S. states produce some of the top overall NFL draft picks over fifteen years. This information can help us identify states with the top college football players, as well as determine if there are any correlations between the state a player went to school in and the NFL team they were drafted to. 
+The NFL draft process occurs when NFL teams pick players, often attending and playing in colleges and universities across the country. The pattern that most typically occurs is the best college football players in the country are often picked in the first couple of rounds. For example, the first player picked in the first round of the draft is likely very talented and highly sought-after. A player’s performance at their college or university is an important consideration for how likely, or quickly they will be picked by an NFL team. Something to consider when looking at players drafted in the NFL, and their corresponding college, is whether certain college football teams produce some of the first picks in the NFL draft. Throughout this analysis we can determine which U.S. states produce some of the top overall NFL draft picks over fifteen years. This information can help us identify states with the top college football players, as well as determine if there are any correlations between the state a player went to school in and the NFL team they were drafted to. 
 
-The data below represents the NFL draft process over a fifteen year period (2006 to 2021). Including in this data included players' names, school they attended, NFL team they were drafted to, the overall pick of each player (ranged 1-32), and the year players were drafted. The map below specifically looks at players' colleges and universities in states across the country and that players' corresponding overall pick number. 
+The data below represents the NFL draft process over fifteen years (2006 to 2021). Included in this data including players' names, the school they attended, the NFL team they were drafted to, the overall pick of each player (ranging from 1-32), and the year players were drafted. The map below specifically looks at players' colleges and universities in states across the country and the players' corresponding overall pick number. 
 
 
 ```{r include=FALSE}
@@ -470,9 +470,9 @@ nfl_final %>%
 
 ## Analysis of Results 
 
-Before analyzing this topic, we had hypothesized that states such as Alabama, Texas, and Louisiana would have some of the highest overall draft picks. I thought this based on the stigma around large football schools in these states, and how seemingly successful they have been over the past few years. However, after using spatial visualizations to further analyze this data we found that states such as New York, Oregon, Wyoming, and Utah have had college football players drafted in the first round and had overall picks of ten or higher, over the period from 2006 to 2021. On the map provided above, these states are colored in red and orange, indicating a player picked relatively high in the first round. Something to consider when looking at this data is that the map only shows data for the first round of the NFL draft, when in reality, there are seven rounds total. If we were to alter the data and look at different rounds, we might see different results. Populations that could find these results interesting are high school recruits whose goal is to make it to the NFL. They could look at the map, or use the search function in the table to see which college or university has consistently sent players to the NFL. To personalize these results further, high school football recruits could search their position and determine what school, and NFL team, previous players have gone to.
+Before analyzing this topic, we hypothesized that states such as Alabama, Texas, and Louisiana would have some of the highest overall draft picks. I thought this based on the stigma around large football schools in these states, and how seemingly successful they have been over the past few years. However, after using spatial visualizations to further analyze this data we found that states such as New York, Oregon, Wyoming, and Utah have had college football players drafted in the first round and had overall picks of ten or higher, over the period from 2006 to 2021. On the map provided above, these states are colored in red and orange, indicating a player picked relatively high in the first round. Something to consider when looking at this data is that the map only shows data for the first round of the NFL draft when in reality, there are seven rounds total. If we were to alter the data and look at different rounds, we might see different results. Populations that could find these results interesting are high school recruits whose goal is to make it to the NFL. They could look at the map, or use the search function in the table to see which college or university has consistently sent players to the NFL. To personalize these results further, high school football recruits could search their position and determine what school, and NFL team, previous players have gone to.
 
-Another aspect of the map to consider are the states colored in gray. The grsy-colored states represent states for which there are no colleges that sent players to the first round of the NFL draft from the years 2006 to 2021. We can see there is a concentration of these states in the far northeast portion on the map, considerably the states Maine, Vermont, New Hampshire, and Rhode Island. It is widely assumed and stereotyped that some of the best college football schools are located in the southern and mid-Atlantic portion of the U.S. From these results we can confirm this assumption and determine that some of the most northern states in the country are not as successful, or do not have as talented players, attending school in these states. 
+Another aspect of the map to consider are the states colored in gray. The gray-colored states represent states for which there are no colleges that sent players to the first round of the NFL draft from the years 2006 to 2021. We can see there is a concentration of these states in the far northeast portion of the map, considerably the states Maine, Vermont, New Hampshire, and Rhode Island. It is widely assumed and stereotyped that some of the best college football schools are located in the southern and mid-Atlantic portion of the U.S. From these results we can confirm this assumption and determine that some of the most northern states in the country are not as successful, or do not have as talented players, attending school in these states. 
 
 
 # NBA
