--- a/index.Rmd
+++ b/index.Rmd
@@ -661,6 +661,21 @@ Our study could be improved in multiple ways, we only examined a few variables a
 - Cheng Joe (2023). "leaflet: Create Interactive Web Maps with the JavaScript 'Leaflet' Library," R package version 2.1.2, available at <https://cran.r-project.org/web/packages/leaflet/index.html>.
 
 
+<!-- R package -->
+- Wickham H, François R, Henry L, Müller K, Vaughan D (2023). dplyr: A Grammar of Data Manipulation. R package version 1.1.0, available at  <https://CRAN.R-project.org/package=dplyr>.
 
+<!-- R package -->
+- Hughes E (2022). tidytuesdayR: Access the Weekly ‘TidyTuesday’ Project Dataset. R package version 1.0.2, available at <https://CRAN.R-project.org/package=tidytuesdayR>.
 
+<!-- R package -->
+- Wickham H, Vaughan D, Girlich M (2023). tidyr: Tidy Messy Data. R package version 1.3.0, available at <https://CRAN.R-project.org/package=tidyr>.
+
+<!-- R package -->
+- Zhu H (2021). kableExtra: Construct Complex Table with ‘kable’ and Pipe Syntax. R package version 1.3.4, available at <https://CRAN.R-project.org/package=kableExtra>.
+
+<!-- R package -->
+- H. Wickham. ggplot2: Elegant Graphics for Data Analysis. Springer-Verlag New York, 2016.
+
+<!-- Textbook -->
+- Baumer, B. S., Kaplan, D. T., and Horton, N. J. (2021), *Modern Data Science with R* (2nd ed.), Boca Raton, FL: CRC Press.
 
